--- a/qiyexiaohao/msg.html
+++ b/qiyexiaohao/msg.html
@@ -102,7 +102,7 @@
 					init: function() {
 						currentWeb = plus.webview.currentWebview();
 						self = this;
-						self.getSmsLog();
+//						self.getSmsLog();
 					}
 				},
 				methods: {
